# dotfile

./: .clang-format  .emacs  CMakeLists.txt  main.cpp  vertex.cppm  vulkan.cppm
RoamNotes/: 20260704194319-archlinux.org  20260704201436-fdisk.org  20260704203724-format.org  20260704210004-mount.org  20260704210454-origin.org  20260704210707-pacstrap.org  20260704211013-setting.org  20260704211248-setting.org  20260704211352-enable.org  20260704211528-local.org  20260704211928-password.org  20260704212100-font.org  20260704212154-grub.org  20260706070507-iwctl.org
niri/: config.kdl
shaders/: compile.sh  shader.slang
ssh/: config
waybar/: config.jsonc  style.css
wireguard/: client.conf  server.conf
